--- a/css/main.css
+++ b/css/main.css
@@ -505,6 +505,15 @@ iframe {
   opacity: 1;
 }
 
+.alert-dismissible .close {
+    position: relative;
+    top: -2.10rem;
+    right: -1.25rem;
+    padding: .75rem 1.25rem;
+    color: inherit;
+}
+
+
 @media (max-width: 992px) {
   .alert-validate::before {
     visibility: visible;
